--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,10 @@ h6 {
   border-radius: 10px;
   transition: all 0.3s;
 }
+
+.sponsor__item:hover svg path {
+  fill: #0c80f3;
+
 .sponsor__item:hover {
   background: rgba(255, 255, 255, 0.5);
 }
