--- a/css/style.css
+++ b/css/style.css
@@ -670,15 +670,17 @@ h6 {
   transition: all 0.3s;
 }
 
-.sponsor__item:hover svg path {
-  fill: #0c80f3;
-
 .sponsor__item:hover {
   background: rgba(255, 255, 255, 0.5);
 }
 .sponsor__item:hover svg {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+.sponsor__item:hover svg path {
+  fill: #0c80f3;
+}
+
 .sponsor__item svg {
   width: 171px;
   height: 67px;
