--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,10 @@ h6 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.sponsor__item svg path {
+  transition: all 0.3s;
+}
+
 .sponsor__item:hover svg path {
   fill: #0c80f3;
 }
